
Last officially released version is -*> v2.0.3 *-

??102001 (v2.1dev3)
	- added: ecasound-config - --ldflags and --prefix for 
	- added: engine profiling info (printed to stderr)
	- changed: pyecasound - makefile-hack that allows pyecasound
		   to work even though compiled against libecasound 
		   and libkvutils that are not installed to 
		   a directory listed in /etc/ld.so.conf
	- changed: disk i/o subsystem is put to sleep more 
		   aggressively, which should further decrease 
		   its cpu-load
	- fixed: in cases where ecasound selected -B:rt instead 
		 of -B:rtlowlatency, -r was alwasy disabled
14102001 (v2.1dev2)
	- added: ecaplay - -k, -d and -h options, see 'man ecaplay'
	- added: eiam - ai-get-length-samples, ao-get-length-samples,
		 cs-get-length-samples, cs-set-length-samples [smassy]
	- added: support for variable length buffer's for ALSA 0.9
		 output (required by -ei:xx type effects)
	- changed: tuned prefill-parameters for double-buffering
	- changed: when saving chainsetups, if no parameters 
	           are overridden, buffermode definition (-B) is
		   saved instead of individual parameters
	- changed: yet more changes to the multitrack-mode
	- changed: eiam - output of *-status commands
	- fixed: -r option wasn't saved to chainsetups (used
		 to be a session-level option)
	- fixed: typeselect problems when used for outputs
	- fixed: system lockups with -B:rtlowlatency and 
		 rt-object-only chainsetups
	- fixed: misplaced tab prevented eci.py from working
		 with python 2.1 (nested scopes)
	- fixed: if a monitor track input ended before recording 
                 stopped in multitrack mode and -z:db was enabled, 
		 it continued producing unwanted noise to the
		 monitor output
	- fixed: eiam - ladspa-register output had plugin names 
		 and descriptions mixed
09102001 (v2.1dev1)
	- added: chainsetup parser prints a warning if an unknown
	         buffering mode is given to -B:mode 
	- changed: 'rt' buffering mode is preferred over 